# wine_site

./: .gitignore  README.md  pyproject.toml
cart/: admin.py  models.py  urls.py  views.py
cart/templates/cart/: cart_detail.html
config/: settings.py  urls.py
main/: admin.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py
main/templates/main/: about.html  base.html  category_detail.html  category_list.html  index.html  product_detail.html
users/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  profile.html  profile_edit.html  register.html
